--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "glyphicons": "^0.2.0",
+    "glyphicons-only-bootstrap": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^3.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
