--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-zmdi": "^1.2.2"
   }
 }
