--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.16.5",
     "react-social-login-buttons": "^3.6.1",
     "web-vitals": "^2.1.4"
   },
