--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.2",
     "glyphicons": "^0.2.0",
@@ -18,11 +19,12 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-icons": "^4.3.1",
+    "react-map-gl": "^7.0.19",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "rsuite": "^5.16.5",
     "react-social-login-buttons": "^3.6.1",
+    "rsuite": "^5.16.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
