--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.6.1",
+    "react-toastify": "^9.0.8",
     "rsuite": "^5.16.5",
     "web-vitals": "^2.1.4"
   },
