--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.2",
     "glyphicons": "^0.2.0",
     "glyphicons-only-bootstrap": "^1.0.1",
+    "mapbox-gl": "^2.10.0",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
