--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-social-login-buttons": "^3.6.1",
     "react-toastify": "^9.0.8",
     "rsuite": "^5.16.5",
+    "tesseract.js": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
