added new UI changes to OCR

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.2",
     "glyphicons": "^0.2.0",
     "glyphicons-only-bootstrap": "^1.0.1",
+    "mapbox-gl": "^2.14.1",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -23,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
-    "react-map-gl": "^7.0.19",
+    "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.6.1",
